--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-/rsrc_windows_386.syso
-/rsrc_windows_amd64.syso
-op-fw_streamdeck.log
-op-fw_streamdeck.old.log
-/dist/op-fw_debug.log
+*.syso
+*.log
